# nlp

./: .gitignore  pyproject.toml
nlp/hw1/: README.md  downloadDataset.bash  hw1.py  tokenizer.py  tokens.json  utils.py
nlp/hw2/: README.md  bestResults.txt  hw2.py  negativeDevelopment.json  negativeTest.json  positiveDevelopment.json  positiveTest.json
nlp/hw3/: Devdataset on BestModel.txt  README.md  bestModelResults.txt  hw3.py
nlp/hw4/: .gitignore  README.md  analogiesResult.txt  downloadCorpus.bash  googleNewsSimilarityResults.txt  hw4.py  requirements.txt  similarityQueryResults.txt
